# sap-doc-agent

./: .env.example  .gitignore  .trivyignore  Dockerfile  README.md  SPEC.md  STATUS.md  config.demo.yaml  config.example.yaml  docker-compose.offline.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.gitea/workflows/: ci.yml
deploy/: .env.client.example  docker-compose.client.yml
docker/chrome/: Dockerfile  supervisord.conf
docs/: ARCHITECTURE_TARGET.md
docs/deploy/: client_checklist.md  demo_script.md  tls.md
docs/plans/: 2026-04-13-plan-a-core-scaffolding.md  2026-04-13-plan-b-scanners.md  2026-04-13-plan-c-agents.md  MIGRATION_PLAN.md  SESSION_PROMPT.md
docs/sac/: README.md  analytic_model_briefings.sql
docs/superpowers/plans/: 2026-04-13-web-ui.md  2026-04-15-session5-factory.md  2026-04-15-spec2sphere-sessions.md  2026-04-16-session6-governance-polish.md  2026-04-17-dspai-session-a-foundation-vertical-slice.md  2026-04-17-dspai-session-b-breadth-widget-consolidation.md  2026-04-17-dspai-session-c-portability-second-customer.md  2026-04-17-dspai-session-prompts.md
docs/superpowers/specs/: 2026-04-13-web-ui-design.md  2026-04-15-spec2sphere-design.md  2026-04-17-dsp-ai-enhancements-design.md
examples/: sample_cdp_extraction.json
knowledge/shared/: best_practices.md  cdp_playbook.md  dsp_quirks.md  hana_sql.md  ui_mapping.md
libraries/cpg_retail/: 01_morning_brief_revenue.json  02_weekly_sell_through.json  03_out_of_stock_ranking.json  04_price_anomaly_explainer.json  05_promo_lift_summary.json  06_category_heatmap_kpis.json  07_supplier_scorecard.json  08_sku_description_refiner.json  README.md  export.json
migrations/: env.py
migrations/versions/: 001_customer_standards.py  002_migration_accelerator.py  003_scanner_tables.py  004_spec2sphere_schema.py  005_intelligence_core.py  006_pipeline_notifications.py  007_factory_tables.py  008_session6_governance.py  009_object_fields_versioning.py  010_dsp_ai_core.py  011_dsp_ai_generations_nullable_enh.py  012_dsp_ai_multitenant.py
ops/: ollama-entrypoint.sh
scripts/: backup.sh  demo_bootstrap.sh  restore.sh  sync_atlas_css.py  verify-install.sh
searxng/: settings.yml
setup/abap/: INSTALL_HORVATH_DEMO.md  README.md  z_doc_agent_scan.abap  z_doc_agent_setup.abap
src/sap_doc_agent/: __main__.py  app.py  cli.py  config.py  metrics.py  telemetry.py
src/sap_doc_agent/agents/: brs_traceability.py  code_quality.py  doc_qa.py  doc_review.py  doc_sync.py  (+1 more)
src/spec2sphere/: __main__.py  app.py  cli.py  config.py  db.py  logging.py  modules.py  telemetry.py
standards/horvath/: code_standard.yaml  doc_standard.yaml  documentation_guideline.md  documentation_standard.yaml  dsp_modeling_standard.yaml  implementation_guideline.md  quality_gates_standard.yaml  sac_design_standard.yaml
templates/seeds/: anomaly_explainer.json  column_title_gen.json  kpi_suggester.json  morning_brief_revenue.json  narrative_overlay.json
tests/: conftest.py  test_agent_terminal.py  test_architect.py  test_atlas_adoption.py  test_atlas_integration.py  test_auth_provider.py  test_browser_pool.py  test_brs_reconciler.py  test_brs_traceability.py  test_bw_patterns.py  test_cdp_client.py  test_cdp_scanner.py  test_chain_analyzer.py  test_chain_builder.py  test_chain_output.py  test_chain_routes.py  test_chain_tasks.py  test_classifier.py  test_cli.py  test_code_quality.py  test_config.py  test_context_envelope.py  test_copilot.py  test_csrf.py  test_declarative_agent.py  test_diagram.py  test_doc_platform.py  test_doc_qa.py  test_doc_review.py  test_doc_sync.py  test_dsp_auth.py  test_dsp_oauth.py  test_dsp_patterns.py  test_dsp_scanner.py  test_effort.py  test_error_pages.py  test_field_extractor.py  test_file_drop.py  test_fr2395_atlas_adoption.py  test_generator.py  (+60 more)
tests/dsp_ai/: test_batch_adapter.py  test_behavior_feeder.py  test_bootstrap.py  test_brain_client.py  test_config.py  test_content_hub_brain.py  test_cost_guard.py  test_engine_stages.py  test_events.py  test_events_routes.py  test_feeders.py  test_file_drop_inotify.py  test_graph_cutover.py  test_item_enrich_dispatch.py  test_library.py  test_live_adapter.py  test_live_adapter_v1b.py  test_mcp_studio_tools.py  test_multitenant.py  test_observed_llm.py  test_offline_profile.py  test_portability.py  test_publish_diff.py  test_quality_router_api.py  test_ranking_dispatch.py  test_rbac.py  test_smoke.py  test_studio_polish.py  test_studio_routes.py  test_widget_hosting.py
tests/fixtures/: sample_brs_finance.yaml  sample_brs_sales.md  sample_brs_workshop_notes.txt
(+395 files in other folders)
